Changes for 4.0.4rc1

New features:
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)

Bug fixes:
..F....... [ZBX-15377] fixed error messages for arrays in GET parameters (Sasha)
A......... [ZBX-15369] fixed "Undefined index: label" in map.update() method (Sasha)
..F....... [ZBX-15376] fixed "Undefined index: refresh" on several pages with disabled guest user (Sasha)
..F....... [ZBX-15375] fixed web scenario step name can consist only of whitespaces (agriscenko)
..F....... [ZBX-15375] fixed undefined index on Web scenario configuration page (Sasha)
..F....... [ZBX-15372] fixed SQL and PHP errors on "Slide shows" page when enter slides.php witout GET parameters (Sasha)
A......... [ZBX-15359] fixed undefined index in maintenance.create and maintenance.update API calls (Sasha)
A......... [ZBX-15358] fixed undefined index in configuration.import API call without one or several rules (Sasha)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)
A......... [ZBX-14926] fixed empty "inventory" property being returned by API if inventory mode is disabled (agriscenko)
A......... [ZBX-15354] fixed undefined index in API calls without "auth" parameter (Sasha)
...G...PS. [ZBX-15399] fixed IPv4 connections not being accepted when IPv6 mask is used (akozlovs)
A......... [ZBX-14331] fixed error allowed to change interface type which is already used by items (gcalenko)
..F....... [ZBX-15254] fixed incorrect matching string highlight in multiselect autocomplete box (ashubin, vasilijs)
..F....... [ZBX-15136] fixed displaying 'Plain text' on the dashboard as html (vasilijs)
........S. [ZBX-15313] fixed unit suffix support in calculated item expressions (kalimulin)
.......PS. [ZBX-15224] fixed failed query errors when receiving non UTF-8 history values (vso)